removed default font size

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 body{
     background-color: #dbddff;
-    font-size: 16px;
+    /* font-size: 16px; */
     color: black;
     font-family: Poppins;
 }
