--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,13 @@
 
 body{
     background-color: #dbddff;
-    /* font-size: 16px; */
+    font-size: 16px;
     color: black;
     font-family: Poppins;
 }
 
 .container{
-    width: 69%;
+    width: 80%;
     margin: 0 auto 5%;
     background-color: #fff;
     position: relative;
@@ -53,7 +53,7 @@ margin-bottom: 20px;
 }
 
 .pd-top{
-    padding-top: 65px;
+    padding-top: 70px;
 }
 .section-top-pd{
     padding: 25px;
@@ -85,7 +85,7 @@ margin-bottom: 20px;
     position: fixed;
     height: 33px;
     box-shadow: 1px 1px 2px  rgb(216, 210, 210);
-    width: 69%;
+    width: 80%;
     justify-content:space-between;
     color: #ffffff;
     align-items: center;
@@ -163,7 +163,7 @@ button {
 /* Hero section */
 
 .hero-section{
-    height: 100vh;
+    height: 95vh;
     background-color: #f5f5f5;
     /* background-color:#141e32; */
 }
@@ -173,7 +173,7 @@ button {
     font-size: 1.5rem;
     color: #141e32;
     font-family: 'Poppins';
-    width: 90%;
+    width: 80%;
 }
 
 
