--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: "Font";
-    src: url("fonts/inter-variablefont_slntwght-webfont.woff");
-}
 *{
     margin: 0;
     padding: 0;
@@ -16,7 +12,7 @@ body{
 }
 
 .container{
-    width: 80%;
+    width: 90%;
     margin: 0 auto 5%;
     background-color: #fff;
     position: relative;
@@ -53,7 +49,7 @@ margin-bottom: 20px;
 }
 
 .pd-top{
-    padding-top: 70px;
+    padding-top: 65px;
 }
 .section-top-pd{
     padding: 25px;
@@ -85,7 +81,7 @@ margin-bottom: 20px;
     position: fixed;
     height: 33px;
     box-shadow: 1px 1px 2px  rgb(216, 210, 210);
-    width: 80%;
+    width: 90%;
     justify-content:space-between;
     color: #ffffff;
     align-items: center;
@@ -157,15 +153,24 @@ button {
     background-color:#545be8;
     color: #fff;
     border: none;
-    
+    font-size: 0.46rem;
 }
 
 /* Hero section */
 
 .hero-section{
-    height: 95vh;
+    width: 100%;
+    height: 100vh;
     background-color: #f5f5f5;
-    /* background-color:#141e32; */
+    position: relative;
+}
+.hero-top{
+    width: 50%;
+}
+
+.hero-bottom{
+    width: 50%;
+
 }
 
 
@@ -173,7 +178,7 @@ button {
     font-size: 1.5rem;
     color: #141e32;
     font-family: 'Poppins';
-    width: 80%;
+    width: 70%;
 }
 
 
@@ -181,6 +186,7 @@ button {
     font-family: Inter;
     font-size: 0.46rem;
     line-height: 2;
+    width: 60%;
 }
 
 
@@ -196,10 +202,8 @@ button {
 
 .image-section img, .stats-image img{
     position: relative;
-    height: 220px;
-    width: 220px;
-    right: 50px;
-    right: 0;
+    width: 100%;
+    left: 0;
     top: 0;
 }
 
@@ -234,17 +238,16 @@ button {
     border: none;
     color: #fff;
     text-align: center;
-    font-size: 0.46rem;
 }
 
 /* Statistics Section */
 
 .service-section{
-    height: 65vh;
+   width: 100%;
     background-color: #fff;
-    padding-left: 70px;
-    padding-right: 70px;
+   padding: 5% 20%;
 }
+
 
 .service-section h1{
     font-size: 1.02rem;
@@ -267,11 +270,7 @@ button {
    align-items: center;
 }
 
-.icon img{
-    /* margin: auto;
-    text-align: center; */
 
-}
 
 .service-section p{
     font-size: 0.35rem;
@@ -307,9 +306,17 @@ button {
 
 /* statistics section */
 .stat-section{
-    height: 70vh;
+    width: 100%;
     gap: 40px;
 }
+.stat-left{
+    width: 50%;
+}
+
+.stat-right{
+    width: 50%;
+}
+
 
 .stats-image img{
     height: 200px;
@@ -363,10 +370,8 @@ button {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: auto auto auto;
-    padding-top: 20px;
-    width: 460px;
-    margin: auto;
-    
+    padding: 5% 7%;
+    width: 100%;
 }
 
 .course{
