--- a/styles.css
+++ b/styles.css
@@ -177,10 +177,10 @@ button {
 
 
 .text-section h1 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: #141e32;
     font-family: 'Poppins';
-    /* width: 90%; */
+    width: 90%;
 }
 
 
@@ -275,7 +275,7 @@ button {
 
 
 .service-section p{
-    font-size: 0.35rem;
+    font-size: 0.4rem;
     text-align: left;
     line-height: 1.5;
 }
@@ -321,8 +321,7 @@ button {
 
 
 .stats-image img{
-    height: 200px;
-    width: 200px;
+    width: 100%;
     left: 30px;
     right: 0;
 }
@@ -333,25 +332,25 @@ button {
 }
 
 .stat-text .selected-course{
-    font-size: 0.46rem;
+    font-size: 0.5rem;
     color: #f0c932;
     padding-top: 30px;
 }
 
 .stat-section h3{
-    font-size: 1.02rem;
+    font-size: 1.5rem;
     width: 70%;
 
 }
 
 .stat-section p{
-    font-size: 0.46rem;
+    font-size: 0.5rem;
     width: 80%;
 }
 
 .views{
     gap: 20px;
-    font-size: 0.45rem;
+    font-size: 0.5rem;
     width: 80%;
 }
 
@@ -364,7 +363,7 @@ button {
     display: block;
     color: #f0c932;
     font-weight: 500;
-    font-size: 0.62rem;
+    font-size: 0.8rem;
 }
 
 /* Course Section */
