--- a/styles.css
+++ b/styles.css
@@ -339,7 +339,7 @@ button {
 
 .stat-section h3{
     font-size: 1.5rem;
-    width: 70%;
+    width: 90%;
 
 }
 
@@ -351,7 +351,7 @@ button {
 .views{
     gap: 20px;
     font-size: 0.5rem;
-    width: 80%;
+    width: 90%;
 }
 
 .view span{
@@ -537,15 +537,16 @@ font-size: 0.43rem;
 
 .testimonial-section{
    
-    width:380px;
+   width: 100%;
     margin: 20px auto;
 }
 .testimony{
     width: 50%;
-    height: 84px;
+    /* height: 84px; */
     position: relative;
     padding: 0 10px;
     box-shadow: 1px 1px 4px rgb(216, 210, 210);
+    margin: auto;
 }
 .test-flex{
     gap: 10px;
@@ -561,7 +562,7 @@ font-size: 0.43rem;
     position:relative;
     /* left: 140px; */
     top: 0;
-    left: 150px;
+    left: 236px;
     z-index: 5;
 
 }
@@ -582,18 +583,18 @@ font-size: 0.43rem;
 
 
 .title h6{
-    font-size: 0.36rem;
+    font-size: 0.4rem;
   
 }
 
 .title p{
-    font-size: 0.28rem;
+    font-size: 0.35rem;
     color: #969696;
     /* margin-top: 5px; */
 }
 
 .txt{
-    font-size: 0.36rem;
+    font-size: 1.5rem;
 }
 
 .star{
@@ -603,8 +604,10 @@ font-size: 0.43rem;
     margin-bottom: 10px;
 }
 
-.last-paragraph{
-    font-size: 0.36rem;
+.test-footer .last-paragraph{
+    font-size: 0.5rem;
+    line-height: 1.5;
+    margin-bottom: 10px;
 }
 
 
@@ -618,8 +621,7 @@ footer{
     background-color: #393e46;
     color: #fff;
     padding: 20px;
-    width: 456;
-    height: 126;
+    width: 100%;
     margin-top: 20px;
 
 }
@@ -634,11 +636,12 @@ footer{
 
 .footer-logo {
    align-items: center;
+   justify-content: center;
     gap: 5px;
 }
 
 .footer-left .txt{
-    font-size: 0.28rem;
+    font-size: 0.4rem;
     width: 70%;
     line-height: 1.5;
     margin: 10px 0;
@@ -647,16 +650,19 @@ footer{
 
 .footer-logo p{
     font-family: Roboto;
-    font-size: 0.28;
+    font-size: 0.5;
     gap: 5px;
 }
 
 
 .right h6{
-    font-size: 0.36rem;
+    font-size: 0.5rem;
+   line-height: 2;
 }
 
 .right p{
-    font-size: 0.28rem;
-}
+    line-height: 2;
+    font-size: 0.4rem;
+   
+} 
 
