--- a/styles.css
+++ b/styles.css
@@ -198,9 +198,9 @@ button {
 }
 
 
-.image-section img, .stats-image img{
+.image-section img{
     position: relative;
-    width: 90%;
+    width: 100%;
     left: 0;
     top: 0;
 }
@@ -303,7 +303,7 @@ button {
 .stat-section{
     width: 100%;
     gap: 40px;
-    height: 300px;
+    height: 350px;
 }
 .stat-left{
     width: 50%;
@@ -315,9 +315,10 @@ button {
 
 
 .stats-image img{
+    position: relative;
     width: 90%;
     left: 30px;
-    right: 0;
+    top: 0;
 }
 
 .stat-text{
