--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
 }
 
 .padding-top{
-    padding-top: 10%;
+    padding-top: 5%;
 }
 
 .container{
@@ -174,7 +174,8 @@ button {
 
 
 .text-section h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    line-height: 1.4;
     color: #141e32;
     font-family: 'Poppins';
     width: 100%;
