--- a/styles.css
+++ b/styles.css
@@ -656,9 +656,9 @@ footer{
     font-size: 0.4rem;
 }
 
-@media screen and (max-width:600px) {
+/* @media screen and (max-width:600px) {
     .hero-section{
-        /* display: block; */
+        /* display: block; 
         height: fit-content;
     }
 
@@ -771,5 +771,5 @@ footer{
     line-height: 2;
     font-size: 0.3rem;
 }
-}
+} */
 
