--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
 
 .container{
     width: 100%;
-    margin: 0 auto 5%;
+    margin: 0 auto;
     background-color: #fff;
     position: relative;
 }
@@ -130,12 +130,12 @@ margin-bottom: 20px;
 button {
     font-size: 0.6rem;
     font-weight: 400;
-    padding: 5.35px 20.18px;
-    width: 70.02px;
+    /* padding: 5.35px 20.18px; */
+    /* width: 70.02px; */
     border-radius: 4.12px;
     font-family: Inter;
-    height: 19.71px;
-    padding:8px 20px 8px 20px;
+    /* height: 19.71px; */
+    padding:6px 20px 6px 20px;
 }
 
 .nav-buttons{
@@ -151,7 +151,7 @@ button {
     background-color:#545be8;
     color: #fff;
     border: none;
-    font-size: 0.6rem;
+    /* font-size: 0.6rem; */
 }
 
 /* Hero section */
@@ -424,13 +424,10 @@ button {
     width: 80%;
 }
 .available button{
-    margin-top: 10px;
-   padding: 0;
     border: none;
     background-color: #545be8;
     color: #fff;
-    margin-left: 0;
-    font-size: 0.35;
+   
 }
 .courses-section .course-one{
     background-image: url("assets/computer.jpg");
@@ -604,7 +601,7 @@ font-size: 0.5rem;
 /* Footer */
 
 .test-footer p{
-font-size: 0.36rem;
+font-size: 0.5rem;
 }
 
 footer{
@@ -644,13 +641,29 @@ footer{
 
 
 .right h6{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
    line-height: 2;
 }
 
 .right p{
     line-height: 2;
-    font-size: 0.65rem;
+    font-size: 0.6rem;
+}
+
+.socials img{
+    height: 25px;
+    width: 25px;
+}
+
+.right li{
+    list-style: none;
+    font-size: 0.5rem;
+    font-weight: 400;
+}
+
+.right ul .head{
+    font-size: 0.6rem;
+    font-weight: 600;
 }
 
 /* @media screen and (max-width:600px) {
