--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,7 @@ button {
     width: 100%;
     background-color: #f5f5f5;
     position: relative;
+    height: 100vh;
 }
 .hero-top{
     width: 50%;
@@ -419,7 +420,7 @@ button {
 
 .available .txt{
     color: #969696;
-    line-height: 1.4;
+    line-height: 1.3;
     font-size: 0.6rem;
     width: 80%;
 }
@@ -427,6 +428,8 @@ button {
     border: none;
     background-color: #545be8;
     color: #fff;
+    padding: 6px 20px;
+    margin-top: 10px;
    
 }
 .courses-section .course-one{
@@ -626,10 +629,11 @@ footer{
 }
 
 .footer-left .txt{
-    font-size: 0.65rem;
+    font-size: 0.6rem;
     width: 70%;
     line-height: 1.5;
     margin: 10px 0;
+    font-family: Poppins;
 
 }
 
@@ -640,16 +644,6 @@ footer{
 }
 
 
-.right h6{
-    font-size: 0.7rem;
-   line-height: 2;
-}
-
-.right p{
-    line-height: 2;
-    font-size: 0.6rem;
-}
-
 .socials img{
     height: 25px;
     width: 25px;
@@ -657,13 +651,16 @@ footer{
 
 .right li{
     list-style: none;
-    font-size: 0.5rem;
+    font-size: 0.6rem;
     font-weight: 400;
+    margin-bottom: 1px;
+
 }
 
 .right ul .head{
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     font-weight: 600;
+    margin-bottom: 2px;
 }
 
 /* @media screen and (max-width:600px) {
