--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family:myFirstFont;
+    src: url('MyFonts/Inter/Inter-VariableFont_slnt\,wght.ttf') format('truetype'), url("MyFonts/Poppins/OFL.txt") format('truetype'), url("MyFonts/Roboto/Roboto-Black.ttf") format("truetype");
+}
+
+*{
+    font-family: myFirstFont;
+}
+
 body{
     background-color: #fff;
     color: black;
@@ -114,6 +123,13 @@ margin-bottom: 20px;
   
 }
 
+@media screen and (max-width:1023px) {
+    .nav-items{
+        font-size: 0.4rem;
+    }
+}
+
+
 .nav-items li{
     list-style: none;
 }
@@ -133,6 +149,14 @@ button {
     font-family: Inter;
     /* height: 19.71px; */
     padding:6px 20px 6px 20px;
+}
+
+@media screen and (max-width:1023px) {
+    button {
+        font-size: 0.5rem;
+        padding:4px 15px;
+    }
+    
 }
 
 .nav-buttons{
@@ -180,6 +204,16 @@ button {
     width: 100%;
 }
 
+@media screen and (max-width:1023px) {
+   
+    
+.text-section h1 {
+    font-size: 2rem;
+}
+    }
+
+
+
 
 .text-section p{
     font-family: Inter;
@@ -203,6 +237,16 @@ button {
    height: 300px;
    width: 306px;
 }
+
+@media screen and (max-width:1023px) {
+   
+.image-section img{
+    height: 250px;
+    width: 256px;
+ }
+}
+
+
 
 .polygon{
     width: 13px;
@@ -245,6 +289,14 @@ button {
    padding: 8% 20%;
    
 }
+
+@media screen and (max-width:1023px) {
+    .service-section{
+        padding: 7% 10%;
+        
+     }
+}
+
 
 
 .service-section h1{
@@ -331,6 +383,12 @@ button {
     font-size: 2rem;
     width: 90%;
 
+}
+
+@media screen and (max-width:1023px) {
+    .stat-section h3{
+        font-size: 1.5rem;
+    }
 }
 
 .stat-section p{
@@ -652,6 +710,23 @@ footer{
 
 }
 
+@media screen and (max-width:1023px) {
+    .right li{
+        font-size: 0.4rem;
+    
+    }
+
+    .logo-txt{
+        font-size: 0.4rem;
+    }
+
+    .right ul .head{
+        font-size: 0.5rem;
+    }
+    
+}
+
+
 .right ul .head{
     font-size: 0.7rem;
     font-weight: 600;
@@ -774,4 +849,7 @@ footer{
     font-size: 0.3rem;
 }
 } */
+
+/* Media Queries */
+
 
